[package]
name = "mule-cli"
version = "0.1.0"
authors = ["libreplex maintainers"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
description = "CLI for the Mule Hybrid DeFi program."
repository = "https://github.com/libreplex/mule-cli"
homepage = "https://libreplex.io"
documentation = "https://libreplex.io"

[[bin]]
name = "mule"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
spl-associated-token-account = {version = "~2"}

borsh = { version = "0.9.3" }
clap = { version = "4.4.10", features = ["derive"] }
dirs = "5.0.1"
indexmap = { version = "2.1.0", features = ["serde"] }
indicatif = "0.17.8"
spl-token = {version="~2"}
spl-token-2022 = {version="~2"}
libreplex_nico = {version="*", path="../libreplex_nico/programs/libreplex_nico"}
libreplex-mule-client = { path="../libreplex_mule/clients/rust", version = "*" }
mpl-token-metadata = {version = "~3"}
podded = "0.5.1"
retry = "2.0.0"
serde = "1.0.193"
serde_json = "1.0.108"
serde_with = "3.7.0"
serde_yaml = "0.9.27"
solana-client = "~1.17"
solana-logger = "~1.17"
solana-program = "~1.17"
solana-sdk = "~1.17"
tokio = "^1.35.1"
